# stytch-rust

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: auto-publish.yml  rust.yaml
src/: client.rs  lib.rs  reqwest.rs  types.rs
src/b2b/: client.rs  discovery.rs  discovery_intermediate_sessions.rs  discovery_organizations.rs  idp.rs  idp_oauth.rs  impersonation.rs  magic_links.rs  magic_links_discovery.rs  magic_links_email.rs  magic_links_email_discovery.rs  mfa.rs  mod.rs  oauth.rs  oauth_discovery.rs  organizations.rs  organizations_members.rs  organizations_members_connected_apps.rs  organizations_members_oauth_providers.rs  otp.rs  otp_email.rs  otp_email_discovery.rs  otp_sms.rs  passwords.rs  passwords_discovery.rs  passwords_discovery_email.rs  passwords_email.rs  passwords_existing_password.rs  passwords_session.rs  rbac.rs  rbac_organizations.rs  recovery_codes.rs  scim.rs  scim_connection.rs  scim_connections.rs  sessions.rs  sso.rs  sso_external.rs  sso_oidc.rs  sso_saml.rs  (+1 more)
src/consumer/: attribute.rs  client.rs  connected_apps.rs  connected_apps_clients.rs  connected_apps_clients_secrets.rs  crypto_wallets.rs  debug.rs  device_history.rs  fraud.rs  fraud_email.rs  fraud_fingerprint.rs  fraud_rules.rs  fraud_verdict_reasons.rs  idp.rs  idp_oauth.rs  impersonation.rs  m2m.rs  m2m_clients.rs  m2m_clients_secrets.rs  magic_links.rs  magic_links_email.rs  mod.rs  oauth.rs  otp.rs  otp_email.rs  otp_sms.rs  otp_whatsapp.rs  passwords.rs  passwords_email.rs  passwords_existing_password.rs  passwords_session.rs  project.rs  rbac.rs  sessions.rs  totps.rs  users.rs  webauthn.rs
src/shared/: jwt_helpers.rs  mod.rs
