[package]
name = "stytch"
version = "2.5.0"
edition = "2021"
license = "MIT"
description = "Stytch Rust client"
documentation = "https://stytch.com/docs"
repository = "https://github.com/stytchauth/stytch-rust"
categories = [
    "api-bindings",
    "authentication",
    "web-programming",
]

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.22", default_features = false, features = ["serde", "std"] }
http = "0.2.8"
http-serde = "1.1.0"
reqwest = { version = "0.11.12", default-features = false, features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tracing = "0.1.35"
url = "2.2.2"

[features]
default = ["reqwest-native-tls"]
reqwest-native-tls = ["reqwest/native-tls"]
reqwest-rustls-tls = ["reqwest/rustls-tls"]
