[package]
name = "stytch"
version = "7.8.0"
edition = "2021"
license = "MIT"
description = "Stytch Rust client"
documentation = "https://stytch.com/docs"
repository = "https://github.com/stytchauth/stytch-rust"
categories = ["api-bindings", "authentication", "web-programming"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.22", default-features = false, features = [
  "serde",
  "std",
] }
http = "1.1.0"
http-serde = "2.1.1"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1", features = ["sync"], default-features = false }
tracing = "0.1.35"
url = "2.2.2"

[features]
default = ["reqwest-native-tls"]
reqwest-native-tls = ["reqwest/native-tls"]
reqwest-rustls-tls = ["reqwest/rustls-tls"]
